trying a category page, but fixed spacing

--- a/assets/scss/multi-layout.scss
+++ b/assets/scss/multi-layout.scss
@@ -1,3 +1,6 @@
+.card-body .card-title {
+  font-size: 1.2rem;
+}
 #multi-desc {
   border:solid #e5e5e5 2px;
   display:flex;
@@ -14,16 +17,16 @@
   display: flex;
 }
 #multi-desc .card-description {
-  margin-top:55px;
+  margin-top:75px;
   flex-wrap: wrap;
   display: flex;
   width:100%;
   height:200px;
 }
 #multi-desc .card-description .card-title {
+  font-size:1rem;
   letter-spacing: .01rem;
   margin-left:0px;
-  font-weight:700;
 }
 #multi-desc .card-body{
   margin-left:100px;
@@ -35,7 +38,7 @@
 }
 #multi-desc .card-title, .card-price {
   text-transform:none;
-  font-weight: 700;
+  font-weight:700;
 }
 #multi-desc .card-title, .card-body, .card-brand{
   margin:10px;
